/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "SecurityModeEnum.proto";
import "AccessPointTypeEnum.proto";

message NetworkInfo {
  required string ssid = 1;
  required string psk = 2;
  required string mac_addr = 3;
  required SecurityMode.Enum security_mode = 4;
  required AccessPointType.Enum ap_type = 5;
}
