/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message SocketInfoResponseStatus {
  enum Enum {
    STATUS_UNSOLICITED_MESSAGE = 1;
    STATUS_SUCCESS = 0;
    STATUS_NO_COMPATIBLE_VERSION = -1;
    STATUS_WIFI_INACCESSIBLE_CHANNEL = -2;
    STATUS_WIFI_INCORRECT_CREDENTIALS = -3;
    STATUS_PROJECTION_ALREADY_STARTED = -4;
    STATUS_WIFI_DISABLED = -5;
    STATUS_WIFI_NOT_YET_STARTED = -6;
    STATUS_INVALID_HOST = -7;
    STATUS_NO_SUPPORTED_WIFI_CHANNELS = -8;
    STATUS_INSTRUCT_USER_TO_CHECK_THE_PHONE = -9;
    STATUS_PHONE_WIFI_DISABLED = -10;
    STATUS_WIFI_NETWORK_UNAVAILABLE = -11;
  }
}
